<resources>
    <string name="app_name">Androiddemo</string>

    <string name="hide_danmaku">hide</string>
    <string name="show_danmaku">show</string>
    <string name="pause_danmaku">pause</string>
    <string name="resume_danmaku">resume</string>
    <string name="send_danmaku">发送一条(纯文字)</string>
    <string name="send_danmaku_image_text">发送一条(图文)</string>
    <string name="send_danmakus">定时发送</string>
    <string name="cancel_sending_danmakus">取消定时</string>

    <string name="release">release</string>
    <string name="rotate">旋转屏幕</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="back_button_alt">Back</string>
    <string name="share_button_alt">Share</string>
    <string name="share_hint">Share using</string>
    <string name="capture_mode_camera">Camera</string>
    <string name="capture_mode_hdr">HDR</string>
    <string name="capture_mode_night">Night</string>
    <string name="delete_button_alt">Delete</string>
    <string name="delete_dialog">Delete current photo?</string>
    <string name="delete_title">Confirm</string>
</resources>
