<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <master.flame.danmaku.ui.widget.DanmakuView
        android:id="@+id/sv_danmaku"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp"/>

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#8acc0000" >

        <Button
            android:layout_weight="1"
            android:id="@+id/rotate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rotate" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/btn_hide"
            android:layout_height="wrap_content"
            android:text="@string/hide_danmaku" />

        <Button
            android:id="@+id/btn_show"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/show_danmaku" />

        <Button
            android:id="@+id/btn_pause"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/pause_danmaku" />

        <Button
            android:id="@+id/btn_resume"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/resume_danmaku" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/send_danmaku" />

        <Button
            android:id="@+id/btn_send_image_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/send_danmaku_image_text" />

    </LinearLayout>
</RelativeLayout>